# backend_admin

./: Dockerfile  README.md  entrypoint.sh  factories.py  pyproject.toml
config/: asgi.py  urls.py
config/settings/: base.py  prod.py
movies/: admin.py  models.py
movies/api/v1/: urls.py  views.py
movies/management/commands/: create_superuser.py  generate_test_data.py
movies/migrations/: 0001_initial.py  0002_filmwork_type.py  0003_auto_20210811_2252.py
requirements/: base.txt
